--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-encoded-mailto": "0.0.6",
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
