--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "@trendmicro/react-paginations": "^0.6.1",
     "@trendmicro/react-table": "^2.0.2",
     "bootstrap": "^4.5.0",
-    "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-encoded-mailto": "0.0.6",
-    "react-fontawesome": "^1.7.1",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1"
